# npp-plugins-x64

./: CMakeLists.txt  README.md  definitions.h.in
NppLightExplorer/: .cvsignore  CMakeLists.txt  FileTreeCtrl.cpp  FileTreeCtrl.h  Notepad_plus_msgs.h  NppLightExplorer.cpp  NppLightExplorer.dsp  NppLightExplorer.dsw  NppLightExplorer.sln  NppLightExplorer.vcproj  README.md  Scintilla.h  SysMsg.cpp  SysMsg.h  TreeCtrl.h  WtlFileTreeCtrl.H  WtlFileTreeCtrl.cpp  makefile  stdafx.cpp  stdafx.h  utils.cpp  utils.h
NppLightExplorer/DockingFeature/: Docking.h  DockingDlgInterface.h  StaticDialog.cpp  StaticDialog.h  Window.h  lightExplorerDlg.cpp  lightExplorerDlg.h  resource.h
NppLightExplorer/DockingFeature/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository  Root
NppLightExplorer/DockingFeature/res/CVS/: Entries  Entries.Extra  Repository
NppLightExplorer/HelpDlg/: HelpDialog.cpp  HelpDialog.h  URLCtrl.cpp  URLCtrl.h
NppLightExplorer/HelpDlg/CVS/: Entries  Entries.Extra  Repository
